test/suite/semantic_errors/duplicate_passage/src/redundant.ral
passage main(): void
\end



passage main(): void
    "Whatever," said the tester.
end
